--- a/bin/resources/index.html
+++ b/bin/resources/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>NeutralinoJs</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="/js/neutralino.js"></script>
+    <script src="js/neutralino.js"></script>
   </head>
   <body>
     <div id="neutralinoapp">
@@ -14,6 +14,17 @@
       <div>
         <a href="#" onclick="openDocs();">Getting started</a> |
         <a href="#" onclick="openInBrowser();">Open in browser</a>
+        <select id="modeSelector" onchange="zoom(this.value);">
+          <option value="50">50%</option>
+          <option value="75">75%</option>
+          <option value="80">80%</option>
+          <option value="90">90%</option>
+          <option value="100">100%</option>
+          <option value="125">125%</option>
+          <option value="150">150%</option>
+          <option value="175">175%</option>
+        </select>
+        <button onclick="getZoom();">Get Zoom</button>
       </div>
     </div>
     <script src="/js/main.js" defer></script>
